fix: add missing margin between blockquote paragraphs

--- a/assets/scss/base/_global.scss
+++ b/assets/scss/base/_global.scss
@@ -171,6 +171,10 @@ blockquote {
   p {
    margin-inline-start: var(--space-m);
   }
+
+  > * + * {
+    margin-top: var(--flow-space, 1em);
+  }
 }
 
 cite,
